# autodlctl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/autodlctl/: __init__.py  __main__.py  cli.py  constants.py  models.py  page_ops.py  parsing.py  runtime.py
src/autodlctl/commands/: __init__.py  account.py  generic.py  instances.py
tests/: test_cli.py  test_parsing.py
tools/: autodl_console.py
